--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
 <div class="container">
   <h1>Responde las perguntas para desbloquear la sorpresa!</h1>
   <div class="question" id="q1">
-    <p>What was the day of our first kiss (dd/mm)?</p>
-    <input type="text" id="answer1">
-    <button onclick="checkAnswer(1)">Submit</button>
+    <div class="question-text">
+      <p>What was the day of our first kiss (dd/mm)?</p>
+    </div>
+    <div class="answer-submit">
+      <input type="text" id="answer1">
+      <button onclick="checkAnswer(1)">Submit</button>
+    </div>
   </div>
-  <div class="question" id="q2" style="display:none;">
-    <p>What is the name of the first plush that I gave you?</p>
-    <input type="text" id="answer2">
-    <button onclick="checkAnswer(2)">Submit</button>
+  <div class="question" id="q2" style="display:none">
+    <div class="question-text">
+      <p>What is the name of the first plush that I gave you?</p>
+    </div>
+    <div class="answer-submit">
+      <input type="text" id="answer2">
+      <button onclick="checkAnswer(2)">Submit</button>
+    </div>
   </div>
   <div class="question" id="q3" style="display:none;">
-    <p>How big is my love for you (as big as...)?</p>
-    <input type="text" id="answer3">
-    <button onclick="checkAnswer(3)">Submit</button>
+    <div class="question-text">
+      <p>How big is my love for you (as big as...)?</p>
+    </div>
+    <div class="answer-submit">
+      <input type="text" id="answer3">
+      <button onclick="checkAnswer(3)">Submit</button>
+    </div>
   </div>
   <div id="result" style="display:none;">
     <p>Congratulations! You unlocked the surprise. Click the button below to reveal it.</p>
